--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-大家好
-我是，这是我的个人网站
-很高兴
+Personal Information
+
+Name: Jian Li (李剑)
+Sex: Male
+Date of Birth: July, 1983
+Marital Status: married
+Citizenship: People's Republic of China
+Email: jianli@jlu.edu.cn or jlphyster@gmail.com
+Institution: College of Physics, Jilin University
+Address: 365# Physics Building, 2699 Qianjin Street, Changchun, 130012, China
+Phone (o): (86) 181-4309-5560
+Homepage: http://theory.jlu.edu.cn/e/faculty/lijian/En.htm
